# openapi/custom.json
@@ -7,18 +7,22 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"Pick_TBook.slug-or-title_": {
+			"Pick_TBook.slug-or-title-or-thumbnail_": {
 				"properties": {
 					"slug": {
 						"type": "string"
 					},
 					"title": {
 						"type": "string"
+					},
+					"thumbnail": {
+						"type": "string"
 					}
 				},
 				"required": [
 					"slug",
-					"title"
+					"title",
+					"thumbnail"
 				],
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
@@ -53,7 +57,7 @@
 						"$ref": "#/components/schemas/Pick_TAuthor.name-or-photo_url-or-about-or-slug_"
 					},
 					"book": {
-						"$ref": "#/components/schemas/Pick_TBook.slug-or-title_"
+						"$ref": "#/components/schemas/Pick_TBook.slug-or-title-or-thumbnail_"
 					},
 					"content": {
 						"type": "string"
@@ -77,17 +81,6 @@
 							"$ref": "#/components/schemas/TQuote"
 						},
 						"type": "array"
-					}
-				},
-				"required": [
-					"data"
-				],
-				"type": "object"
-			},
-			"TApiDataReponse_TQuote_": {
-				"properties": {
-					"data": {
-						"$ref": "#/components/schemas/TQuote"
 					}
 				},
 				"required": [
@@ -207,8 +200,95 @@
 				],
 				"type": "object"
 			},
+			"Pick_TBook.Exclude_keyofTBook.formats__": {
+				"properties": {
+					"slug": {
+						"type": "string"
+					},
+					"title": {
+						"type": "string"
+					},
+					"thumbnail": {
+						"type": "string"
+					},
+					"id": {
+						"type": "string"
+					},
+					"audio_version_url": {
+						"type": "string"
+					},
+					"dimensions": {
+						"type": "string"
+					},
+					"ebook_version_url": {
+						"type": "string"
+					},
+					"isbn": {
+						"type": "string"
+					},
+					"pages_count": {
+						"type": "number",
+						"format": "double"
+					},
+					"publish_date": {
+						"type": "number",
+						"format": "double"
+					},
+					"publisher": {
+						"type": "string"
+					},
+					"author": {
+						"$ref": "#/components/schemas/TAuthor"
+					},
+					"categories": {
+						"items": {
+							"$ref": "#/components/schemas/TCategory"
+						},
+						"type": "array"
+					},
+					"language": {
+						"$ref": "#/components/schemas/TLanguage"
+					},
+					"image_url": {
+						"type": "string"
+					},
+					"preface": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"slug",
+					"title",
+					"thumbnail",
+					"id",
+					"audio_version_url",
+					"dimensions",
+					"ebook_version_url",
+					"isbn",
+					"pages_count",
+					"publish_date",
+					"publisher",
+					"author",
+					"categories",
+					"language",
+					"image_url",
+					"preface"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_TBook.formats_": {
+				"$ref": "#/components/schemas/Pick_TBook.Exclude_keyofTBook.formats__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
 			"TFormat": {
 				"properties": {
+					"book": {
+						"$ref": "#/components/schemas/Omit_TBook.formats_"
+					},
+					"book_id": {
+						"type": "string"
+					},
 					"prices": {
 						"items": {
 							"$ref": "#/components/schemas/TPrice"
@@ -223,6 +303,7 @@
 					}
 				},
 				"required": [
+					"book_id",
 					"prices",
 					"is_available",
 					"label"
@@ -378,7 +459,7 @@
 		"contact": {}
 	},
 	"paths": {
-		"/quotes": {
+		"/store/quotes": {
 			"get": {
 				"operationId": "GetQuotes",
 				"responses": {
@@ -401,7 +482,7 @@
 				"parameters": []
 			}
 		},
-		"/quotes/random": {
+		"/store/quotes/random": {
 			"get": {
 				"operationId": "GetRandomQuote",
 				"responses": {
@@ -410,7 +491,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/TApiDataReponse_TQuote_"
+									"$ref": "#/components/schemas/TApiDataReponse_TQuote-Array_"
 								}
 							}
 						}
@@ -419,12 +500,12 @@
 						"description": "No content"
 					}
 				},
-				"description": "Get a random quote",
+				"description": "Get two random quotes",
 				"security": [],
 				"parameters": []
 			}
 		},
-		"/categories": {
+		"/store/categories": {
 			"get": {
 				"operationId": "GetCategories",
 				"responses": {
@@ -456,7 +537,7 @@
 				]
 			}
 		},
-		"/books": {
+		"/store/books": {
 			"get": {
 				"operationId": "GetBooks",
 				"responses": {
@@ -498,7 +579,7 @@
 				]
 			}
 		},
-		"/books/category/{category_id}": {
+		"/store/books/category/{category_id}": {
 			"get": {
 				"operationId": "GetBooksByCategory",
 				"responses": {
@@ -548,7 +629,7 @@
 				]
 			}
 		},
-		"/books/{slug}": {
+		"/store/books/{slug}": {
 			"get": {
 				"operationId": "GetBookBySlug",
 				"responses": {
@@ -578,6 +659,29 @@
 						}
 					}
 				]
+			}
+		},
+		"/store/assistant": {
+			"get": {
+				"operationId": "GetRecommendation",
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string"
+								}
+							}
+						}
+					},
+					"204": {
+						"description": "No content"
+					}
+				},
+				"description": "Recommend quote and book from a query",
+				"security": [],
+				"parameters": []
 			}
 		}
 	},
